--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
-  "name": "cross-env",
-  "version": "0.0.0-semantically-released",
-  "description":
-    "Run scripts that set and use environment variables across platforms",
+  "name": "cross-env-file",
+  "version": "0.0.1",
+  "description": "Run scripts that set environment across platforms via JSON file",
   "main": "dist/index.js",
   "bin": {
-    "cross-env": "dist/bin/cross-env.js",
-    "cross-env-shell": "dist/bin/cross-env-shell.js"
+    "cross-env-file": "dist/bin/cross-env-file.js",
+    "cross-env-file-shell": "dist/bin/cross-env-file-shell.js"
   },
   "engines": {
     "node": ">=4.0"
   },
   "scripts": {
-    "add-contributor": "kcd-scripts contributors add",
     "build": "kcd-scripts build",
     "lint": "kcd-scripts lint",
     "test": "kcd-scripts test",
     "test:update": "npm test -- --updateSnapshot --coverage",
     "validate": "kcd-scripts validate",
-    "precommit": "kcd-scripts precommit"
+    "predeploy": "npm run build",
+    "deploy": "npm publish --access public"
   },
-  "files": ["dist"],
-  "keywords": ["cross-environment", "environment variable", "windows"],
-  "author": "Kent C. Dodds <kent@doddsfamily.us> (http://kentcdodds.com/)",
+  "files": [
+    "dist"
+  ],
+  "keywords": [
+    "cross-environment",
+    "environment variable",
+    "windows"
+  ],
+  "author": "Marco Jakob <majakob@gmx.ch> (https://www.makery.ch)",
   "license": "MIT",
   "dependencies": {
     "cross-spawn": "^6.0.5",
@@ -34,13 +39,14 @@
   "eslintConfig": {
     "extends": "./node_modules/kcd-scripts/eslint.js"
   },
-  "eslintIgnore": ["node_modules", "coverage", "dist"],
+  "eslintIgnore": [
+    "node_modules",
+    "coverage",
+    "dist"
+  ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/kentcdodds/cross-env.git"
+    "url": "https://github.com/marcojakob/cross-env-file.git"
   },
-  "bugs": {
-    "url": "https://github.com/kentcdodds/cross-env/issues"
-  },
-  "homepage": "https://github.com/kentcdodds/cross-env#readme"
+  "homepage": "https://github.com/marcojakob/cross-env-file#readme"
 }
